# zavrsni_rad

./: CMakeLists.txt  README.md
cfg/: MavAttitudeCtlParams.cfg  MavXYCtlParams.cfg  MavZCtlParams.cfg
launch/: bebop_control.launch  bebop_control_real.launch  bebop_driver.launch  bebop_gazebo_control.launch  bebop_gazebo_control_with_trajectory.launch  bebop_gazebo_geometric_control.launch  bebop_gazebo_geometric_control_2.launch  bebop_joy_override.launch  bebop_optitrack.launch  tello_joy_override.launch
scripts/: attitude_ctl.py  bebop_joy_override.py  geometric_ctl.py  height_ctl.py  horizontal_ctl.py  horizontal_ctl_real.py  pid.py  sim_controller.py  tello_joy_override.py  trajectory_to_position_reference.py  trajectory_to_trajectory_point.py  ukf_uav.py  vrpn_transformer.py
startup/bebop_demo/: session.yml
startup/bebop_demo/custom_config/: bebop_demo.perspective
